# ImGenPlayground

./: .gitignore  README.md  pyproject.toml  train.py
scipts/: check_data.py  preprocess_data.py
src/imgenplayground/: datasets.py  gen_model.py  lit_module.py
