[project]
name = "imgenplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.1",
    "ipykernel>=6.30.1",
    "lightning>=2.5.3",
    "polars>=1.32.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "lovely-tensors>=0.1.18",
    "icecream>=2.1.7",
    "ipykernel>=6.30.1",
    "seaborn>=0.13.2",
]
